# nflogic

./: .build_docs.sh  .flake8  .gitignore  README.md  pyproject.toml
.github/: coverage.json
.github/workflows/: docs.yml  python-package.yml  tests.yml
docs/: CLI.md  index.html  nflogic.html  search.js
docs/nflogic/: api.html  cli.html
docs/nflogic/api/: cache.html  db.html  parse.html
docs/templates/: custom.css  frame.html.jinja2  module.html.jinja2
src/nflogic/: __init__.py  __main__.py  api.py  cache.py  cli.py  db.py  parse.py
src/nflogic/api/: __init__.py  cache.py  db.py  parse.py
src/nflogic/api/database/: db.sqlite
src/xml_parser/: __main__.py  cache.py  db.py  parse.py
tests/: test_cache.py  test_cahce.py  test_db.py  test_integration.py  test_parse.py  test_xml_v4.xml
